# Generalized-Rational-Variable-Projection-with-Application-in-ECG-Compression

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
code/: README.md  example.py  example_newer.py  for_testing_stuff.py
code/Adaptive_Wavelets/: compress_awt.py  decompress_awt.py  example.py  genfilt6.py  matlab_wavelet_functions.py  opt_params_wt.py
code/B_spline/: Bspline.py  bspline_coeffs.py  calcmat.py  calcmat_opt.py  compress.py  decompress.py  example.py  predict_mse.py  preserve.py  solve_opt.py
code/Hermite/: example.py  hermite_coeff.py  hermite_exp.py  hermite_recbeat.py  hermite_roots.py  hermite_system.py  subsample.py
code/Rational/: hyp_mdpso.py  norm_sig.py
code/Rational.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
code/Rational/Hyperbolic_operators/: draw_unitcircle.py  eBlaschke.py  rho.py  rho0.py  scale.py  section.py
code/Rational/rait/: addimag.py  asd.txt  mt_coeffs.py  mt_generate.py  mt_system.py  multiply_poles.py  periodize_poles.py
data/: PhysioNet_MITBIH_rec119_5min.mat  poleconf.mat  thetas.mat
tests/Adaptive_Wavelet_tests/: test_genfilt6.py  test_opt_params_wt.py
tests/B_spline_tests/: test_Bspline.py  test_bspline_coeffs.py  test_calcmat_opt.py  test_predict_mse.py  test_preserve.py  test_solve_opt.py
tests/Hermite_tests/: test_auxiliary_quant.py  test_hermite_coeff.py  test_hermite_exp.py  test_hermite_recbeat.py  test_hermite_roots.py  test_hermite_system.py  test_subsample.py
tests/rational_tests/: test_norm_sig.py
(+49 files in other folders)
