[metadata]
name = Generalized-Rational-Variable-Projection-with-Application-in-ECG-Compression
description = valami
author = me
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires = 
    requests>=2
    numpy
    matplotlib
python_requires = >=3.9
package_dir = 
    =code
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
Generalized-Rational-Variable-Projection-with-Application-in-ECG-Compression = py.typed

[flake8]
max-line-length = 160